# the_pico_sid

./: .gitignore  README.md
c64_tools/the_pico_sid_config/: the_pico_sid_config.lst  the_pico_sid_config.prg
doc/: .~lock.ThePicoSid_Dokumentation.odt#  Bestückungsplan_PCB2.0.odt  Kurzanleitung_Prototyp1.odt  ThePicoSid_Dokumentation.odt  noch_zu_loesende_probleme.txt
doc/Test Programme C64/: sid_ringmodulation_test.prg  sid_ringmodulation_test.txt  (+1 more)
firmware/: CMakeLists.txt  env.c  env.h  f0_points_6581.h  f0_points_8580.h  filter.c  filter.h  gpio_mapping.txt  main.c  main.cpp  mos6581_8085_waves.h  osc.c  osc.h  pico_sid.cpp  pico_sid.h  pico_sid_defs.h  sid.c  sid.h  sid_dac.cpp  sid_dac.h  sid_envelope.cpp  sid_envelope.h  sid_extfilter.cpp  sid_extfilter.h  sid_filter.cpp  sid_filter.h  sid_voice.cpp  sid_voice.h  sid_wave.cpp  sid_wave.h  version.h  wave6581_PST.h  wave6581_PS_.h  wave6581_P_T.h  wave6581__ST.h  wave8580_PST.h  wave8580_PS_.h  wave8580_P_T.h  wave8580__ST.h  waves.h
firmware/pio/: dma_read.pio  read_sid_reg.pio  write_sid_reg.pio
hardware/: fp-info-cache  the_pico_sid.dsn  the_pico_sid.frb  the_pico_sid.kicad_pcb  the_pico_sid.kicad_prl  the_pico_sid.kicad_pro  the_pico_sid.kicad_sch  the_pico_sid.rules  the_pico_sid.ses  the_pico_sid_bom_pcb_1.0.ods  ~the_pico_sid.kicad_sch.lck
the_pico_sid_desktop_simulation/: README.md  audiogenerator.cpp  audiogenerator.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  oscilloscope_widget.cpp  oscilloscope_widget.h  oscilloscope_widget.ui  siddump.cpp  siddump.h  the_pico_sid_desktop_simulation.pro
(+6 files in other folders)
